k8s/cnb-springboot/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: cnb-springboot
